_sass/overrides.scss
.site-header {
    display: none;
}

.site-footer {
    display: none;
}

.side-bar {
    top: 80px;
    position: relative;
    z-index: 100;
    display: flex;
    flex-wrap: wrap;
    background-color: #f5f6fa;
}
@media (min-width: 50rem) {
    .side-bar {
        flex-wrap: nowrap;
        width: 186px;
        height: 100%;
        flex-direction: column;
        border-right: 1px solid #eeebee;
        align-items: flex-end;
    }
}
@media (min-width: 66.5rem) {
    .side-bar {
      width: calc((100% - 1320px) / 2 + 186px);
      min-width: 186px;
    }
}

.main-content {
    top: 80px;
    position: relative;
}
@media (min-width: 50rem) {
    .navigation, .site-header, .site-footer {
        width: 186px;
    }
    .hamburger {
        display: none !important;
    }
    .main-content {
        max-width: 800px;
        margin-left: 186px;
    }
}
@media (min-width: 66.5rem) {
    .main-content {
        margin-left: calc((100% - 960px) / 2 + 186px);
    }
}

// button outline states
.btn:focus {
        box-shadow: 0 0 0 3px rgba($color: $matatika-default, $alpha: 0.5);
}

.btn:focus:hover {
        box-shadow: 0 0 0 3px rgba($color: $matatika-default, $alpha: 0.5);
}

// header stuff

#header {
    box-sizing: border-box;
    background: #fff;
    padding: 10px 20px;
    box-shadow: 0 2px 6px rgba(0,0,0,.15);
    position: fixed;
    left: 0;
    right: 0;
    top: 0;
    z-index: 200;

    div {
        -webkit-box-align: center;
        align-items: center;
        display: flex;
    }

    .content_1280 {
        max-width: 1280px;
        margin: 0 auto;
        position: relative;
        padding: 8px 0;
    }

    .logo.small {
        width: 150px;
        display: inline-block;
    }

    .logo img, .logo.small img{
        display: block;
        margin: 0;
        width: 100%;
    }

    .leftBorder {
        margin-left: 16px;
        padding-left: 14px;
        border-left: #EE7A34 solid 1px;
        color: #EE7A34;
        font-weight: 600;
        min-height: 26px;
    }
}


.hamburger {
    font: inherit;
    display: inline-block;
    overflow: visible;
    margin: 0;
    padding: 0px;
    cursor: pointer;
    transition-timing-function: linear;
    transition-duration: .15s;
    transition-property: opacity, filter;
    text-transform: none;
    color: inherit;
    border: 0;
    background-color: transparent;
    position: fixed;
    right: 20px;
    top: 30px;
    z-index: 5;
}
.hamburger.is-active:hover, .hamburger:hover {
    opacity: 1
}
.hamburger.is-active .hamburger-inner, .hamburger.is-active .hamburger-inner:after, .hamburger.is-active .hamburger-inner:before {
    background-color: #FFAB2B;
}
.hamburger.is-active {

}
.hamburger-box {
    position: relative;
    display: inline-block;
    width: 35px;
    height: 24px
}
.hamburger-inner {
    top: 50%;
    display: block;
    margin-top: -2px
}
.hamburger-inner, .hamburger-inner:after, .hamburger-inner:before {
    position: absolute;
    width: 35px;
    height: 4px;
    transition-timing-function: ease;
    transition-duration: .15s;
    transition-property: transform;
    border-radius: 0px;
    background-color: #FFAB2B;
    right: 0px;
}
header.shrink .hamburger-inner, header.shrink .hamburger-inner:after, header.shrink .hamburger-inner:before {
    background-color: #FFAB2B;
}
.hamburger-inner:before {
    width: 35px;
}
.hamburger-inner:after {
    width: 35px;
}

.hamburger-inner:after, .hamburger-inner:before {
    display: block;
    content: ""
}
.hamburger-inner:before {
    top: -10px;
}
.hamburger-inner:after {
    bottom: -10px
}
.hamburger--spin .hamburger-inner {
    transition-timing-function: cubic-bezier(.55, .055, .675, .19);
    transition-duration: .22s
}
.hamburger--spin .hamburger-inner:before {
    transition: top .1s ease-in .25s, opacity .1s ease-in
}
.hamburger--spin .hamburger-inner:after {
    transition: bottom .1s ease-in .25s, transform .22s cubic-bezier(.55, .055, .675, .19)
}
.hamburger--spin.is-active .hamburger-inner {
    transition-delay: .12s;
    transition-timing-function: cubic-bezier(.215, .61, .355, 1);
    transform: rotate(225deg)
}
.hamburger--spin.is-active .hamburger-inner:before {
    top: 0;
    transition: top .1s ease-out, opacity .1s ease-out .12s;
    opacity: 0;
    width: 35px;
}
.hamburger--spin.is-active .hamburger-inner:after {
    bottom: 0;
    transition: bottom .1s ease-out, transform .22s cubic-bezier(.215, .61, .355, 1) .12s;
    transform: rotate(-90deg);
    width: 35px;
}

